# FieldPhysics

./: .gitignore  CMakeLists.txt  README.md  build.py  build.sh
example/: CMakeLists.txt  main.c
lib/: CMakeLists.txt  field_engine.c  field_engine.h
src/: CMakeLists.txt  field_engine.c  field_engine.h  field_math.h  main.c  main.cpp  main.h  main.hpp  module.h  player.c  player.h
src/engine/: CMakeLists.txt  physics.c  physics.h  player.c  player.h  render_engine.c  todo.txt  world.c  world.h
src/engine/core/: draw.c  draw.h  world.c  world.h
src/engine/physics/: collision.h  collisions.c  physics.c  physics.h  physics_engine.c  physics_engine.h
src/modules/: m_physics.c  m_physics.h
